log
Thu 16 May 2024 09:10:12 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
068896a
Thu 16 May 2024 09:17:24 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2eacb95
Thu 16 May 2024 09:18:56 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:14: error: ‘k’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   60 |             k++;
      |             ~^~
cc1: all warnings being treated as errors
Compilation failed
f45caac
Thu 16 May 2024 09:19:04 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
911eec4
Thu 16 May 2024 09:19:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a7dce4e
Thu 16 May 2024 09:23:30 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
cffda1c
Thu 16 May 2024 09:35:08 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:14: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |    int i, j, k;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
3fdf157
Thu 16 May 2024 09:35:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
636137b
Thu 16 May 2024 09:41:32 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
0ee22e1
Thu 16 May 2024 09:44:44 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
fd0bb68
Thu 16 May 2024 09:47:46 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|2
total_score: 45/70
07f9c1e
Thu 16 May 2024 09:49:33 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:120:13: error: unused variable ‘n’ [-Werror=unused-variable]
  120 |       Node* n = top(S);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
cb83acb
Thu 16 May 2024 09:51:05 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|2
total_score: 45/70
18e0615
Thu 16 May 2024 09:57:26 PM UTC: 
 sudoku.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:122:16: error: expected expression before ‘;’ token
  122 |       (cont)+++;
      |                ^
Compilation failed
ff51db8
